@@ -7276,8 +7276,8 @@ FUNCTION LIST (continued)
     U()         UCSTR()     UDEFAULT()  ULOCAL()    UNPACK()    V()
     VADD()      VALID()     VCROSS()    VDIM()      VDOT()      VERSION()
     VISIBLE()   VMAG()      VMUL()      VSUB()      VUNIT()     WHERE()
-    WIDTH()     WORDPOS()   WORDS()     WRAP()      WRITETIME() XGET()
-    XOR()       ZFUN()      ZONE()      ZWHO()
+    WIDTH()     WIPE()      WORDPOS()   WORDS()     WRAP()      WRITETIME()
+    XGET()      XOR()       ZFUN()      ZONE()      ZWHO()
 
 & FUNCTIONS
 FUNCTIONS
@@ -10167,10 +10167,13 @@ MYOPIC
 & NAME()
 NAME()
 
-  FUNCTION: name(<dbref>)
+  FUNCTION: name(<dbref>[,<newname>])
 
   This function returns the name of the indicated object.  When called with
   an exit it returns the only the first alias.
+
+  If function side effects are allowed, this function, given two arguments,
+  acts just like @name <object>=<new name>.
 
   Related Topics: fullname().
 
@@ -10640,10 +10643,13 @@ PARENT ROOMS
 & PARENT()
 PARENT()
 
-  FUNCTION: parent(<obj>)
+  FUNCTION: parent(<obj>[,<new parent>])
 
   Returns the parent of <obj>.  Returns #-1 if <obj> cannot be found or
   if you do not own <obj> and it is not set VISUAL.
+
+  If function side effects are allowed, this function, given two arguments,
+  acts just like @parent <object>=<new parent>.
 
   Example:
     > say parent(me)
@@ -13441,8 +13447,6 @@ TRIGGER()
   triggering object becomes the enactor and the positional parameters %0
   through %9 are set to the supplied parameters.
 
-  This function is only available if FIRANMUX is enabled.
-
   Related Topics: @trigger
 
 & TRIM()
@@ -14051,6 +14055,18 @@ WIDTH()
     You say, "122"
 
   Related Topics: height().
+
+& WIPE()
+WIPE()
+
+  FUNCTION: wipe(<obj>[/wildattr])
+
+  The wipe() function will remove all matching attributes specified by
+  a wildcard, or, if no attribute is specified, remove all attributes of
+  the specified object.  This function works like @wipe and follows all
+  permissions and restrictions of the matching command.
+
+  See Also: @wipe, @set, &, set()
 
 & WIZARD
 WIZARD
