@@ -100,6 +100,7 @@ Feature Additions:
  -- Extend %=<> subtitution to take integer values which allow
     softcode access to all 100 arguments.
  -- Add %+ substitution to return number of arguments.
+ -- Allow @notify/all/quiet (Issue 427).
 
 
 Bug Fixes:
